# marketplace-api

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  settings.py
app/: database.py  main.py  models.py  schemas.py  settings.py  test_app.py
app/tests/: test_fastapi.py
tests/: test_app.py
